# half-edge-mesh-rs

./: Cargo.toml  README.md
src/: edge.rs  face.rs  half_edge_mesh.rs  iterators.rs  lib.rs  mesh.rs  ptr.rs  util.rs  vert.rs
