[package]
name = "half_edge_mesh"
version = "1.1.8"
authors = ["Mark Hintz <markinportland7@gmail.com>"]
license = "MIT"
description = "A basic implementation of the half-edge mesh data structure. It has a bunch of the functions you probably want in a half-edge mesh, but probably not all of them. I'm intending to add more methods and mutation techniques, as I need them for other projects or as I think of them. Pull requests welcome!"
repository = "https://github.com/mhintz/half-edge-mesh-rs"
readme = "README.md"
keywords = ["half", "edge", "mesh", "graphics", "graph"]

[dependencies]
cgmath = "^0.16.0"
approx = "^0.1.1"
